--- a/scss/home/hero.scss
+++ b/scss/home/hero.scss
@@ -111,7 +111,7 @@ nav {
     justify-content: space-between;
     align-items: center;
 }
-div {
+.div {
     &.pipe {
         color: $site-pink;
         font-size: 20px;
