--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -25,7 +25,7 @@ nav {
 
         div {
             &.pipe {
-                color: $site-blue;
+                color: $site-pink;
                 font-size: 20px;
             }
             //margin: auto;
