--- a/scss/footer/footer.scss
+++ b/scss/footer/footer.scss
@@ -1,26 +1,25 @@
-footer {
-    max-width: 100%;
-    height:470px;
+footer{
+    max-width: 1280px;
+    height:455px;
     background-color: #EE4367;
     background-size:cover;
     margin: 0 auto;
     display: block;
     justify-content: space-between;
     padding: 0px 120px;
-    margin-top: 130px;
+    margin-top:-3px;
     margin-bottom: 0px;
-    position: relative;
     font-size: 16px;
     text-align: center;
     
     .logo {
-        //background-color: red;
         width: 92px;
-        height: 42px;
+        height: 124px;
+        padding-top: 42px;
         align-self: center;
-        margin-top:36px;
+        margin-top:136px;
         margin-bottom: 46px;
-    
+        margin: 0 auto;
     }
     .address {
         color: #fff;
@@ -28,35 +27,55 @@ footer {
         font-family: GillSans;
         text-align:center;
         height:67px;
-        margin-bottom: 46px;
+        margin-bottom: 20px;
     }
-    .emailbox{
-        display:flex;
-        width: 529px;
-        height: 60px;
-        padding-left:23px;
-    }
-    .subscribe{
-        background-color: #FFF;
-        color: #EE4367;
-        height: 60px;
-        width: 167px;
-        display:flex;
-    }
+    .emailstuff{
+      width:696px;
+      margin:auto;
+      display: inline-flex;
+      padding-top: 8px;
+      margin-bottom: 30px;
+
+        .emailbox{
+          display:flex;
+          width: 529px;
+          height: 60px;
+          padding-left:23px;
+          padding-top: 20px;
+          margin: 0 auto;
+          background-color: #F56B88;
+          color:white;
+        }
+      .subscribe{
+          background-color: #FFF;
+          color: #EE4367;
+          height: 60px;
+          width: 167px;
+          display:flex;
+          margin: 0 auto;
+          padding-left: 45px;
+          padding-top: 20px;
+      }
+    }  
     .socialmedia {
         width:156px;
-        height:108px;
+        height:22px;
         display: flex;
         justify-content: space-between;
         align-self: center;
         color: $white;
         margin-top: 30px;
         margin-bottom: 47px;
+        margin: 0 auto;
     }
     .copyright {
+      margin-top: 30px;
         font-size: 12px;
         align-self: center;
         color: $white;
+        margin: 0 auto;
+        padding-top: 40px;
+        height:50px;
     }
 }
 
