--- a/scss/home/hero.scss
+++ b/scss/home/hero.scss
@@ -1,25 +1,10 @@
 .hero {
     width: 1280px;
     height: 500px;
-    background-image: $overlay, url(../images/home-hero.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     margin: 0 auto;
     padding-top: 20px;
-    //vertical-align: middle;
     display: block;
 
-        //.nav {
-
-            //.logo {
-
-            //}
-            //.links {
-                //font-family: "GillSans";
-            //}
-
-       //}
        nav {
         width: 1280px;
         height: 60px;
@@ -47,7 +32,7 @@
     
                 div {
                     &.pipe {
-                        color: $site-blue;
+                        color: $site-pink;
                         font-size: 20px;
                 }
                 a {
@@ -75,12 +60,25 @@
         display:block;
         text-align:center;
     }
+    .smallbanner {
+        text-align: center;
+        color:#EE4367;
+        margin-top: 10px;
+    }
     .lorem {
+        margin-top: 30px;
          text-align: center;
          color: white;
     }
+    .sitebutton {
+        @include center(981px, 20px auto 0 auto);
+        margin-top: 30px;
+        text-align: center;
+        margin: auto;
+    }
     .readmore {
-         background-color: $site-blue;
+        margin-top: 30px;
+         background-color: $site-pink;
          padding: 15px 30px;
          //border-radius: 20px;
          width: 150px;
@@ -125,7 +123,7 @@ nav {
 }
 div {
     &.pipe {
-        color: $site-blue;
+        color: $site-pink;
         font-size: 20px;
     }
     //margin: auto;
@@ -157,7 +155,7 @@ div {
 }
 
 .home-hero-image {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../images/hero/home-hero.jpeg);
+    background-image: linear-gradient(to bottom, rgba(255,255,0,.5), rgba(255,255,0,.5)), url(../images/hero/home-hero.jpg);
 }
 
 .about-hero-image {
