--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -1,10 +1,12 @@
 .homequote{
-    width:1280px;
-    height:300px;
+    width:780px;
+    height:180px;
     display:block;
     color:#FFD140;
     font-size:15px;
     font-family: GillSans;
+    margin: 77px auto 0pc auto;
+
 
     .name {
         color: #EE4367;
@@ -12,219 +14,263 @@
         font-size:15px;
     }
     .position{
+        margin-top: 5px;
         font-size:10px;
+        color:#A8A8A8;
     }
 }
 .upcomingevents {
     background-color: #540D6E;
     font-family:GillSans;
-    width:1200px;
-    display:block;
+    display:flex;
+    flex-direction: row;
+    width:1280px;
+    height: 320px;
+    margin: 0 auto;
+    color: #FFF;
+    border-bottom: 3px solid white;
 
     .upcomingheadline{
+        padding-top: 45px;
+        padding-left: 15px;
         font-size:25px;
+        //margin: auto;
+        width:392px;
+        height:201px;
+    }
+    .headlineborder{
         border-bottom: 3px solid white;
-        width:1280px;
+        width:392px;
+        height:3px;
+        margin-left: 15px;
+        margin-top: 150px;
     }
     .upcomingevents1{
-        width:1200px;
+        width:238px;
+        height: 119px;
         display:flex;
+        margin-top: 25px;
         flex-direction: row;
+        
 
         .dateblock1{
-            display:block;
             width:80px;
             height:119px;
-            margin-right: 20px;
+            margin-right: 5px;
             margin-bottom: 59px;
-
+    
             .date1{
             width:60px;
             height:60px;
             background-color: #EE4367;
             color:white;
-
+            text-align:center;
+            padding-top: 8px;
+    
                 .line1{
                     font-size:22px;
+                
                 }
-                .line1{
-                    font-size:12px;  
+                .line2{
+                    font-size:12px;
                 }
             }
-
+    
         }
         .text1{
             font-size:15px;
             color: #FFF;
-            width: 140px;
-            height:41px;
+            width: 158px;
+            height:119px;
+            
+            .blurb1{
+                color: #FFF;
+                font-size:15px;
+            }
+            .blurb2{
+                font-size: 13px;
+                color:#EE4367;
+            }
         }
-        .text2 {
-            font-size: 13px;
-            color:#EE4367;
-            width: 140px;
-            height: 78px;
-        }
+        
     }
     .upcomingevents2{
-        width:1200px;
+        width:238px;
+        height: 119px;
         display:flex;
+        margin-top: 25px;
         flex-direction: row;
 
         .dateblock2{
-            display:block;
             width:80px;
             height:119px;
-            margin-right: 20px;
+            margin-right: 5px;
             margin-bottom: 59px;
 
-            .date1{
+        }
+        .date2{
             width:60px;
             height:60px;
             background-color: #EE4367;
             color:white;
-
-                .line1{
-                    font-size:22px;
-                }
-                .line1{
-                    font-size:12px;  
-                }
+            text-align:center;
+            padding-top: 8px;
+                
+            .line3{
+                font-size:22px;
+                width: 60px;
             }
-
-        }
-        .text1{
+            .line4{
+                font-size:12px;  
+            }
+        }   
+        .text2{
             font-size:15px;
             color: #FFF;
-            width: 140px;
-            height:41px;
-        }
-        .text2 {
-            font-size: 13px;
+            width: 158px;
+            height:119px;
+
+            .blurb3{
+                color: #FFF;
+                font-size:15px;
+            }
+            .blurb4{
+                font-size: 13px;
             color:#EE4367;
-            width: 140px;
-            height: 78px;
+            }
+
         }
     }
     .upcomingevents3{
-        width:1200px;
+        width:238px;
+        height: 119px;
         display:flex;
-        flex-direction: row;
+        margin-top: 25px;
 
         .dateblock3{
-            display:block;
             width:80px;
             height:119px;
-            margin-right: 20px;
+            margin-right: 5px;
             margin-bottom: 59px;
 
-            .date1{
-            width:60px;
-            height:60px;
-            background-color: #EE4367;
-            color:white;
+            .date3{
+                width:60px;
+                height:60px;
+                background-color: #EE4367;
+                color:white;
+                text-align:center;
+                padding-top: 8px;
 
-                .line1{
+                .line5{
                     font-size:22px;
                 }
-                .line1{
+                .line6{
                     font-size:12px;  
                 }
             }
 
         }
-        .text1{
+        .text3{
             font-size:15px;
             color: #FFF;
-            width: 140px;
-            height:41px;
-        }
-        .text2 {
-            font-size: 13px;
+            width: 158px;
+            height:119px;
+            .blurb5{
+                color: #FFF;
+                font-size:15px;
+            }
+            .blurb6{
+                font-size: 13px;
             color:#EE4367;
-            width: 140px;
-            height: 78px;
+            }
         }
     }
     .upcomingevents4{
-        width:1200px;
+        width:238px;
+        height: 119px;
         display:flex;
-        flex-direction: row;
+        margin-top: 25px;
 
         .dateblock4{
-            display:block;
             width:80px;
             height:119px;
-            margin-right: 20px;
+            margin-right: 5px;
             margin-bottom: 59px;
 
-            .date1{
-            width:60px;
-            height:60px;
-            background-color: #EE4367;
-            color:white;
+            .date4{
+                width:60px;
+                height:60px;
+                background-color: #EE4367;
+                color:white;
+                text-align:center;
+                padding-top: 8px;
 
-                .line1{
+                .line7{
                     font-size:22px;
                 }
-                .line1{
+                .line8{
                     font-size:12px;  
                 }
             }
 
         }
-        .text1{
+        .text4{
             font-size:15px;
             color: #FFF;
-            width: 140px;
-            height:41px;
-        }
-        .text2 {
-            font-size: 13px;
-            color:#EE4367;
-            width: 140px;
-            height: 78px;
+            width: 158px;
+            height:119px;
+            .blurb7{
+                color: #FFF;
+                font-size:15px;
+            }
+            .blurb8{
+                font-size: 13px;
+                color:#EE4367;
+            }
         }
     }
     .upcomingevents5{
-        width:1200px;
+        width:238px;
+        height: 119px;
         display:flex;
-        flex-direction: row;
+        margin-top: 25px;
 
         .dateblock5{
-            display:block;
             width:80px;
             height:119px;
-            margin-right: 20px;
+            margin-right: 5px;
             margin-bottom: 59px;
 
-            .date1{
-            width:60px;
-            height:60px;
-            background-color: #EE4367;
-            color:white;
+            .date5{
+                width:60px;
+                height:60px;
+                background-color: #EE4367;
+                color:white;
+                text-align:center;
+                padding-top: 8px;
 
-                .line1{
+                .line9{
                     font-size:22px;
                 }
-                .line1{
+                .line10{
                     font-size:12px;  
                 }
             }
 
         }
-        .text1{
+        .text5{
             font-size:15px;
             color: #FFF;
-            width: 140px;
-            height:41px;
+            width: 158px;
+            height:180px;
+            .blurb9{
+                color: #FFF;
+                font-size:15px;
+            }
+            .blurb10{
+                font-size: 13px;
+                color:#EE4367;
+            } 
         }
-        .text2 {
-            font-size: 13px;
-            color:#EE4367;
-            width: 140px;
-            height: 78px;
-        }
-    }
-
+    }   
 }
