--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,10 +1,10 @@
 @import "variables.scss";
 @import "mixins.scss";
 @import "structure.scss";
+@import "home/home.scss";
 @import "home/hero.scss";
 @import "home/nav.scss";
-@import "hero.scss";
-@import "nav.scss";
+@import "footer/footer.scss";
 @import "about.scss";
 @import "blog.scss";
 @import "contact.scss";
