--- a/css/gallery/gallery5.css
+++ b/css/gallery/gallery5.css
@@ -1,49 +1,49 @@
-.gallery1 {
+.gallery5 {
   width: 981px;
   height: 600px;
   display: block;
   margin: 0 auto;
 }
-.gallery1 .galimage1 {
+.gallery5 .gal5image1 {
   display: flex;
   width: 981px;
   height: 401px;
   margin-top: 30px;
-  background-image: linear-gradient(to bottom, rgba(255, 209, 64, 0.5), rgba(255, 255, 0, 0.5)), url(../images/gallery/1.png);
+  background-image: linear-gradient(to bottom, rgba(59, 206, 171, 0.5), rgba(59, 206, 171, 0.5)), url(../images/gallery/5.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-.gallery1 .galimage1 .gal1text1 {
+.gallery5 .gal5image1 .gal5text1 {
   position: absolute;
   margin-top: 117px;
   flex-direction: row;
   font-size: 300px;
-  color: #FFD140;
+  color: #3BCEAB;
   position: absolute;
   text-shadow: 1px 1px 5px black;
 }
-.gallery1 .galimage1 .gal1text2 {
+.gallery5 .gal5image1 .gal5text2 {
   position: absolute;
   flex-direction: row;
   font-size: 140px;
-  color: #FFD140;
+  color: #3BCEAB;
   text-shadow: 1px 1px 5px black;
-  margin-top: 265px;
+  margin-top: 268px;
   margin-left: 240px;
 }
-.gallery1 .gal1text3 {
+.gallery5 .gal5text3 {
   width: 980px;
   height: 133px;
   display: flex;
 }
-.gallery1 .gal1text3 .leftcol {
+.gallery5 .gal5text3 .leftcol {
   margin: 30px;
   flex-direction: row;
   width: 491px;
   height: 133px;
 }
-.gallery1 .gal1text3 .rightcol {
+.gallery5 .gal5text3 .rightcol {
   margin: 30px;
   flex-direction: row;
   width: 451px;
